# minutiae

./: .gitignore  Makefile  README.org  rebar.config
doc/: user.org
python_src/minutia2erl/: README.org  __main__.py  erlang.py  minutia2erl.py  pyproject.toml
python_src/minutia2erl/tests/: test_http_custom_lainchan.py  test_http_custom_reddit.py  test_http_custom_twitter.py  test_http_custom_youtube.py  test_irc_bot_science_clsr_net.py
src/: minutiae.app.src  minutiae.erl  minutiae_app.erl  minutiae_response.erl  minutiae_sup.erl
test/: http_4chan_SUITE.erl
